# 3d-stuff

./: README.md  pyproject.toml
.github/workflows/: ci-testing.yml
