[tool.poetry]
name = "3d-stuff"
version = "0.1.0"
package-mode = false
description = "3D experiments"
authors = ["Viibrant <11376396+Viibrant@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.4.0"
torch = "^2.4.1"
h5py = "^3.11.0"
torchvision = "^0.19.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
codecov = "^2.1.13"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
check-manifest = "^0.49"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
